examples/negative/parser_syntax/let_no_name.kai
# Negative fixture (#520 / parser): a `let` declaration has no
# pattern between `let` and `=`. Parser must reject with
# "expected pattern".

fn main() : Int {
  let = 1
  0
}
